--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,3 +1,12 @@
+server:
+  port: 8081
 spring:
   application:
     name: fintech
+  datasource:
+    url: jdbc:mysql://localhost:3306/bank
+    username: root
+    password: root
+  jpa:
+    hibernate:
+      ddl-auto: update
