--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,12 +1,14 @@
-server:
-  port: 8081
 spring:
+  config:
+    import: optional:file:.env[.properties]
   application:
     name: fintech
   datasource:
-    url: jdbc:mysql://localhost:3306/bank
-    username: root
-    password: root
+    url: ${DB_URL}
+    username: ${DB_USERNAME}
+    password: ${DB_PASSWORD}
   jpa:
     hibernate:
       ddl-auto: update
+server:
+  port: ${PORT}
